# sdl3_game

./: .clang-format  .gitmodules  CMakeLists.txt  main.cpp
assets/shader/: demo.frag.hlsl  lander.frag.hlsl  lander.vert.hlsl  lander.vert.spv  odin.frag.hlsl  odin.vert.hlsl  odin.vert.spv  pull_sprite_batch.vert.hlsl  text.vert.hlsl  text.vert.spv  textured_quad_color.frag.hlsl
assets/shaders/: demo.frag.glsl  demo.vert.glsl  demo.vert.hlsl  fragment.glsl  fragment.spv
lander/assets/shader/: lander.frag.hlsl  text.frag.hlsl  text.vert.hlsl  text.vert.spv
lander/include/: App.h  Assets.h  Audio.h  Graphics.h  Lander.h  Render_component.h  Render_instance.h  Render_instance_builder.h  Render_packet.h  System.h  Text.h  Utility.h  Utils.h  placeholder.h
lander/notes/: graphics-note-4.txt  handling_matrices  note.txt  note4.txt  old_process.txt  structure.txt
lander/src/: App.cpp  Audio.cpp  Graphics.cpp  Lander.cpp  System.cpp  Text.cpp  Timer.cpp  Utility.cpp  Utils.cpp  assets.h  definitions.h  main.cpp  placeholder.cpp  utils.h
lander/src/components/: components.cpp
lander/src/components/include/: components.h
lander/src/core/: app.cpp  audio_manager.cpp  graphics_context.cpp  input_manager.cpp  renderer.cpp  resource_manager.cpp  text_manager.cpp  timer.cpp
lander/src/core/include/: app.h  audio_manager.h  graphics_context.h  input_manager.h  renderer.h  resource_manager.h  text_manager.h  timer.h
lander/src/game/: camera.cpp  game_object.cpp  game_state.cpp  mesh_library.cpp  terrain_generator.cpp
lander/src/game/include/: camera.h  game_object.h  game_state.h  input_state.h  lander_game.h  mesh_library.h  terrain_generator.h
lander/src/rendering/: render_command.h  render_queue.h  shader_types.h  vertex_types.h
lander/src/systems/: collision_system.cpp  input_system.cpp  physics_system.cpp  player_control_system.cpp  render_system.cpp  ui_system.cpp
lander/src/systems/include/: collision_system.h  input_system.h  physics_system.h  player_control_system.h  render_system.h  ui_system.h
lessons/: 04-color-keying.cpp  06-rotation-and-flipping.cpp  07-color-modulation-and-alpha-blending.cpp
lessons/CS502D/: pong.cpp
lessons/attempts/lander/include/: Audio.h  Game.h  Graphics.h  Lander.h  Render_component.h  System.h  Text.h  Timer.h
lessons/attempts/lander/notes/: graphics-note.txt  graphics-note2.txt  graphics-note3.txt  note2.txt  note3.txt  sprite-batcher.txt
lessons/attempts/lander/src/: App.cpp  Game.cpp  Graphics.cpp  Lander.cpp
lessons/lazyfoo/: 01-hello-sdl3.cpp  02-textures-and-extension-libraries.cpp  03-key-presses-and-key-states.cpp  05-sprite-clipping-and-stretching.cpp  08-true-type-fonts.cpp  09-mouse-events.cpp  10-timing.cpp  11-advanced-timers.cpp  12-frame-rate-and-vsync.cpp  13-motion.cpp  14-animation.cpp  15-sound-effects-and-music.cpp  16-collision-detection.cpp  17-text-input-and-clipboard-handling.cpp  18-scrolling.cpp  19-state-machines.cpp
lessons/misc/: cmake-notes.txt
lessons/tetris/include/: Grid.h  Tetromino.h
lessons/tetris/src/: Grid.cpp  Tetromino.cpp  Timing_controller.cpp
sandbox/: Sandbox_app.cpp  Sandbox_app.h  sandy.cpp
tetris/include/: Game.h  Grid.h  Tetromino.h  Text_object.h  Timing_controller.h
tetris/src/: Game.cpp  Grid.cpp  Tetromino.cpp  Text_object.cpp
